--- a/app/templates/documents/info.html
+++ b/app/templates/documents/info.html
@@ -34,6 +34,13 @@
     </div>
 
     <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Updated by</h5>
+        <div class="col-12 col-sm-9 ">
+                <a href="https://github.com/n1kg0r">Nikolai Gorbachev</a>
+        </div>
+    </div>
+
+    <div class="row mb-4">
         <h5 class="col-12 col-sm-3 mb-1">Supervised by</h5>
         <div class="col-12 col-sm-9 ">
                 <a href="https://www.unibo.it/sitoweb/silvio.peroni" target="_blank">Silvio Peroni</a> and <a href="https://www.unibo.it/sitoweb/francesca.tomasi" target="_blank">Francesca Tomasi</a>
