--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -97,7 +97,7 @@
                                   <i class="fas fa-cloud-upload-alt fa-5x text-light"></i>
                           </div>
                           <div class="text-center modal-body bg-light">
-                                  <h4>Project Uploaded!</h4>
+                            <h4>Project Uploaded!</h4>
                             <p>The request is being approved</p>
                             <p>Thank you for your contribution!</p>
                           </div>
@@ -121,7 +121,7 @@
                         <div class="modal-dialog" role="document">
                           <div class="modal-content bg-transparent">
                             <div class="modal-header bg-success justify-content-center">
-                                    <i class="fas fa-cloud-upload-alt fa-5x text-light"></i>
+                                    <i class="fas fa-rotate-left fa-5x text-light"></i>
                             </div>
                             <div class="text-center modal-body bg-light">
                                     <h4>Project Updated!</h4>
@@ -148,13 +148,13 @@
                         <div class="modal-dialog" role="document">
                           <div class="modal-content bg-transparent">
                             <div class="modal-header bg-success justify-content-center">
-                                    <i class="fas fa-cloud-upload-alt fa-5x text-light"></i>
+                                    <i class="fas fa-eraser fa-5x text-light"></i>
                             </div>
                             <div class="text-center modal-body bg-light">
                               <h4>Project Deleted!</h4>
-                              <p>Thank you for your contribution and we hope to see you again soon!</p>
+                              <p class="mt-1">Thank you for your contribution and we hope to see you again soon!</p>
                             </div>
-                            <div class="modal-footer bg-light  justify-content-center">
+                            <div class="modal-footer bg-light justify-content-center">
                               <button type="button" class="btn btn-secondary btn-success" data-bs-dismiss="modal">OK</button>
                             </div>
                           </div>
