--- a/app/templates/manager.html
+++ b/app/templates/manager.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-4">
         <ul class="nav nav-tabs">
             <li class="nav-item">
               <a class="nav-link {% if active == 'confirm' %}active{% endif %}" href="{{ url_for('AdminConfirm') }}">Confirm Project</a>
