--- a/app/templates/documents/info.html
+++ b/app/templates/documents/info.html
@@ -3,119 +3,127 @@
 {% block content %}
 
 <div class= "col-11 col-md-10 col-xl-8 mx-auto mt-5 mb-4" style="z-index: 0;"> 
-
-    <h1 class="mb-4  display-6">DHDKey! Info</h1>
-
-
-    <div class="row mb-3">
-        <h5 class="col-12 col-sm-3 mb-1">About us</h5>
-        <div class="col-12 col-sm-9">
-                <p>
-                        DHDKey! (Digital Humanitites and Digital Knowledge Educational Yearbook)
-                         is an online tool designed to collect and publish all the projects developed by the students of the Digital Humanitites
-                           and Digital Knowledge (DHDK) Master's course at the University of Bologna.
-                            
-                </p>
-
-                <p>
-                        The goal of DHDKey! is to organize all the DHDK students' projects in a historical collection and to provide all students of the course with their own academic portfolio.
-                </p>
-
-                <p> DHDKey! is developed and managed by the community of DHDK students as a part of <a href="https://centri.unibo.it/dharc/en" target="_blank">/DH.Arc</a> research activity</p>
-
+        <h1 class="mb-4  display-6">
+                DHDKey! Info
+        </h1>
+        <div class="row mb-3">
+                <h5 class="col-12 col-sm-3 mb-1">About us</h5>
+                <div class="col-12 col-sm-9">
+                        <p>
+                                DHDKey! (Digital Humanitites and Digital Knowledge Educational Yearbook)
+                                is an online tool designed to collect and publish all the projects developed 
+                                by the students of the Digital Humanitites
+                                and Digital Knowledge (DHDK) Master's course at the University of Bologna.       
+                        </p>
+                        <p>
+                                The goal of DHDKey! is to organize all the DHDK students' 
+                                projects in a historical collection and to provide all students 
+                                of the course with their own academic portfolio.
+                        </p>
+                        <p>
+                                DHDKey! is developed and managed by the community of DHDK students as a part of 
+                                <a href="https://centri.unibo.it/dharc/en" target="_blank">
+                                        /DH.Arc
+                                </a> 
+                                research activity
+                        </p>
+                </div>
         </div>
-    </div>
-
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Created by</h5>
-        <div class="col-12 col-sm-9 ">
-                <a href="{{ url_for('projects', id='fabio_mariani6') }}">Fabio Mariani</a>
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Created by</h5>
+                <div class="col-12 col-sm-9 ">
+                        <a href="{{ url_for('projects', id='fabio_mariani6') }}">Fabio Mariani</a>
+                </div>
         </div>
-    </div>
-
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Updated by</h5>
-        <div class="col-12 col-sm-9 ">
-                <a href="https://github.com/n1kg0r">Nikolai Gorbachev</a>
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Updated by</h5>
+                <div class="col-12 col-sm-9 ">
+                        <a href="https://github.com/n1kg0r">Nikolai Gorbachev</a>
+                </div>
         </div>
-    </div>
-
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Supervised by</h5>
-        <div class="col-12 col-sm-9 ">
-                <a href="https://www.unibo.it/sitoweb/silvio.peroni" target="_blank">Silvio Peroni</a> and <a href="https://www.unibo.it/sitoweb/francesca.tomasi" target="_blank">Francesca Tomasi</a>
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Supervised by</h5>
+                <div class="col-12 col-sm-9 ">
+                        <a href="https://www.unibo.it/sitoweb/silvio.peroni" target="_blank">Silvio Peroni</a> and <a href="https://www.unibo.it/sitoweb/francesca.tomasi" target="_blank">Francesca Tomasi</a>
+                </div>
         </div>
-    </div>
 
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Release date</h5>
-        <div class="col-12 col-sm-9 ">
-                <p>2020-2023</p>
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Release date</h5>
+                <div class="col-12 col-sm-9 ">
+                        <p>2020-2023</p>
+                </div>
         </div>
-    </div>
-    
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Website License</h5>
-        <div class="col-12 col-sm-9 d-flex flex-column gap-1">
-                <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>
-                <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+        
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Website License</h5>
+                <div class="col-12 col-sm-9 d-flex flex-column gap-1">
+                        <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>
+                        <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+                </div>
         </div>
-    </div>
-    
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Projects Data and Metadata License</h5>
-        <div class="col-12 col-sm-9 d-flex flex-column gap-1">
-                <a href="http://creativecommons.org/licenses/zero/1.0/">Creative Commons Zero 1.0 International License</a>
-                <a rel="license" target="_blank" href="http://creativecommons.org/licenses/zero/1.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/zero/1.0/88x31.png" /></a>
+        
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Projects Data and Metadata License</h5>
+                <div class="col-12 col-sm-9 d-flex flex-column gap-1">
+                        <a href="http://creativecommons.org/licenses/zero/1.0/">Creative Commons Zero 1.0 International License</a>
+                        <a rel="license" target="_blank" href="http://creativecommons.org/licenses/zero/1.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/zero/1.0/88x31.png" /></a>
+                </div>
         </div>
-    </div>
 
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Cite as</h5>
-        <div class="col-12 col-sm-9 ">
-                <p>DHDKey!, curated by \DH.Arc, version 1.0, 2020</p>
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Cite as</h5>
+                <div class="col-12 col-sm-9 ">
+                        <p>DHDKey!, curated by \DH.Arc, version 1.0, 2020</p>
+                </div>
         </div>
-    </div>
 
-    <div class="row mb-4">
-        <h5 class="col-12 col-sm-3 mb-1">Contact us</h5>
-        <div class="col-12 col-sm-9 d-flex flex-row gap-2 justify-content-start align-items-center">
-                
-                        
-
-                                <a href="mailto:dharc@live.unibo.it" data-bs-toggle="tooltip" data-bs-html="true" data-bs-title="Any questions?<br/>Write us an email!"
-                                data-bs-placement="bottom"
-                                class="text-dark text-decoration-none"><i class="far fa-envelope fa-2x"></i></a>
-                        
-                
-                        <a rel="license" target="_blank" href="https://github.com/dharc-org/dhdkey" data-bs-toggle="tooltip" data-bs-html="true" data-bs-title="DHDKey! on GitHub"
+        <div class="row mb-4">
+                <h5 class="col-12 col-sm-3 mb-1">Contact us</h5>
+                <div class="col-12 col-sm-9 d-flex flex-row gap-2 justify-content-start align-items-center">
+                        <a 
+                        href="mailto:dharc@live.unibo.it" 
+                        data-bs-toggle="tooltip" 
+                        data-bs-html="true" 
+                        data-bs-title="Any questions?<br/>Write us an email!"
                         data-bs-placement="bottom"
-                        class="text-dark text-decoration-none"><i class="fab fa-github fa-2x"></i>
-                                </a>
-                        
-
-                         
-                        
-                         <a href="https://maps.app.goo.gl/SV7KR4WMopS5CN3L6" 
-                         data-bs-toggle="tooltip" data-bs-html="true" data-bs-title="Department of Classical Philology and Italian Studies<br/> (FICLIT)<br/> via Zamboni 32,<br/> 40126, Bologna"
-                                data-bs-placement="bottom"
-                                class="text-dark text-decoration-none"><i class="fas fa-map-marker-alt fa-2x"></i></a>
-                                
-                        <a href="mailto:nikolai.gorbachev@studio.unibo.it" data-bs-toggle="tooltip" data-bs-title="Report a problem"
+                        class="text-dark text-decoration-none"
+                        >
+                                <i class="far fa-envelope fa-2x"></i>
+                        </a>
+                        <a 
+                        rel="license" 
+                        target="_blank" 
+                        href="https://github.com/dharc-org/dhdkey" 
+                        data-bs-toggle="tooltip" 
+                        data-bs-html="true" 
+                        data-bs-title="DHDKey! on GitHub"
                         data-bs-placement="bottom"
-                        class="text-dark text-decoration-none"><i class="far fa-screwdriver-wrench bg-white text-dark icon fa-2x"></i></a>
-
-                
+                        class="text-dark text-decoration-none"
+                        >
+                                <i class="fab fa-github fa-2x"></i>
+                        </a>
+                        <a 
+                        href="https://maps.app.goo.gl/SV7KR4WMopS5CN3L6" 
+                        data-bs-toggle="tooltip" 
+                        data-bs-html="true" 
+                        data-bs-title="Department of Classical Philology and Italian Studies<br/> (FICLIT)<br/> via Zamboni 32,<br/> 40126, Bologna"
+                        data-bs-placement="bottom"
+                        class="text-dark text-decoration-none"
+                        >
+                                <i class="fas fa-map-marker-alt fa-2x"></i>
+                        </a>
+                        <a 
+                        href="mailto:nikolai.gorbachev@studio.unibo.it" 
+                        data-bs-toggle="tooltip" 
+                        data-bs-title="Report a problem"
+                        data-bs-placement="bottom"
+                        class="text-dark text-decoration-none"
+                        >
+                                <i class="far fa-screwdriver-wrench bg-white text-dark icon fa-2x"></i>
+                        </a>
+                </div>
         </div>
-    </div>
-
-    
-    
-    
 </div>
 
-<script>
-        // const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-        // const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-</script>
 {% endblock %}
