--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -147,8 +147,7 @@
                     </h4>
                     {% endif %}
                     <h5 class="text-secondary mt-0">
-                        [[ searchResult.pagination.total ]] Item
-                        <span v-if="searchResult.pagination.total != 1">s</span> 
+                        [[ searchResult.pagination.total ]] Item<span v-if="searchResult.pagination.total != 1">s</span> 
                         Found
                     </h5>
                 </div>
