--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -9,61 +9,117 @@
             <!--TITLE-->
             <div class="form-group mb-3">
                     <label for="Title">Project title</label>
-                    <input type="text" class="form-control" id="Title" name="Title" required="true" placeholder="Enter your project&#39;s title">
-              </div>
-
+                    <input 
+                    type="text" 
+                    class="form-control" 
+                    id="Title" 
+                    name="Title" 
+                    required="true" 
+                    placeholder="Enter your project&#39;s title"
+                    >
+            </div>
 
             <!--REPOSITORY LINK-->
             <div class="form-group mb-3">
                 <label for="Repository">Project Github<!-- DH.arc--> repository</label>
-                <input type="text" required="true" class="form-control" id="Repository" name="Repository" placeholder="github.com/example" pattern="[(http(s)?):\/\/(www\.)?a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)" title="Make sure to provide a valid URL">
-              </div>
+                <input 
+                type="text" 
+                required="true" 
+                class="form-control" 
+                id="Repository" 
+                name="Repository" 
+                placeholder="github.com/example" 
+                pattern="[(http(s)?):\/\/(www\.)?a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)" 
+                title="Make sure to provide a valid URL"
+                >
+            </div>
             
             <!--WEBSITE LINK-->
             <div class="form-group mb-3">
-                    <label for="Homepage">Project website (optional)</label>
-                    <input type="text" class="form-control" id="Homepage" name="Homepage" placeholder="example.com" pattern="[(http(s)?):\/\/(www\.)?a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)" title="Make sure to provide a valid URL">
-                  </div>
+                <label for="Homepage">Project website (optional)</label>
+                <input type="text" 
+                class="form-control" 
+                id="Homepage" 
+                name="Homepage" 
+                placeholder="example.com" 
+                pattern="[(http(s)?):\/\/(www\.)?a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)" 
+                title="Make sure to provide a valid URL"
+                >
+            </div>
 
-            
             <!--AUTHORS-->
             <div class="mb-3">
-                    <label>List of authors</label>
+                <label>List of authors</label>
                 <div id="author-container" class="card bg-light"> 
                     <div class="card-body p-3 author-container-body">
-
                         <div class="form-group author-fields card author-item text-left text-sm-center" id="item-0">
                             <div class="card-header text-body-secondary bg-white d-flex flex-row justify-content-end">
-                                    <button type="button" class="btn btn-danger btn-sm delete disabled" for="item-0">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                
+                                <button 
+                                type="button" 
+                                class="btn btn-danger btn-sm delete disabled" 
+                                for="item-0"
+                                >
+                                    <span aria-hidden="true">&times;</span>
+                                </button>   
                             </div>
                             <div class="card-body text-body-secondary bg-white p-3">
                                 <div class="row">
                                     <div class="col-12 authorname">
                                         <div class="mb-2 form-floating">
-                                            <input type="text" class="form-control" id="Aut[0][Name]"  name="Aut[0][Name]" required="true" placeholder="Enter Author&#39;s Name" >
-                                            <label for="Aut[0][Name]" class="col-sm-4 col-form-label">Author Name</label>
+                                            <input 
+                                            type="text" 
+                                            class="form-control" 
+                                            id="Aut[0][Name]"  
+                                            name="Aut[0][Name]" 
+                                            required="true" 
+                                            placeholder="Enter Author&#39;s Name" 
+                                            >
+                                            <label for="Aut[0][Name]" class="col-sm-4 col-form-label">
+                                                Author Name
+                                            </label>
                                         </div>
                                         <div class="mb-2 form-floating">
-                                            <input type="text" class="form-control" id="Aut[0][Surname]"  name="Aut[0][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">
-                                            <label for="Aut[0][Surname]"  class="col-sm-4 col-form-label">Author Surname</label>
+                                            <input 
+                                            type="text" 
+                                            class="form-control" 
+                                            id="Aut[0][Surname]"  
+                                            name="Aut[0][Surname]"  
+                                            required="true" 
+                                            placeholder="Enter Author&#39;s Surname"
+                                            >
+                                            <label for="Aut[0][Surname]" class="col-sm-4 col-form-label">
+                                                Author Surname
+                                            </label>
                                         </div>
                                         <div class="form-floating">
-                                            <input type="mail" class="form-control" id="Aut[0][Mail]" name="Aut[0][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">
-                                            <label for="Aut[0][Mail]"  class="col-sm-4 col-form-label">UniboMail</label>
+                                            <input 
+                                            type="mail" 
+                                            class="form-control" 
+                                            id="Aut[0][Mail]" 
+                                            name="Aut[0][Mail]" 
+                                            pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" 
+                                            placeholder="Enter Author&#39;s Unibo Mail" 
+                                            title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" 
+                                            required="true"
+                                            >
+                                            <label for="Aut[0][Mail]" class="col-sm-4 col-form-label">
+                                                UniboMail
+                                            </label>
                                         </div>
                                     </div>
-                                    
                                 </div>
                             </div>
-                            
                         </div>
                     </div>
                     <div class="card-footer text-body-secondary bg-light">
-                        <button id="add-more" name="add-more" type="button" class="btn btn-primary">Add more</button>
-                        
+                        <button 
+                        id="add-more" 
+                        name="add-more" 
+                        type="button" 
+                        class="btn btn-primary"
+                        >
+                            Add more
+                        </button>
                     </div>
                 </div>
             </div>
@@ -79,61 +135,73 @@
             <!--COURSE-->
             <div class="form-group mb-3">
                 <label for="Course">Course title</label>
-                <select class="course-title-select form-control text-body-secondary" id="Course" name="Course" disabled required="true">
-                        <option value="" disabled selected>Select course title...</option>
+                <select 
+                class="course-title-select form-control text-body-secondary" 
+                id="Course" 
+                name="Course" 
+                disabled 
+                required="true">
+                    <option value="" disabled selected>Select course title...</option>
                 </select>
-                <div class="academic-year-form-text form-text mt-0 pt-0">Select course academic year first</div>
+                <div class="academic-year-form-text form-text mt-0 pt-0">
+                    Select course academic year first
+                </div>
             </div>
 
             <!--DESCRIPTION-->
             <div class="form-group mb-3">
                 <label for="Description">Project Description</label>
                 <div class="form-floating text-body-secondary">
-                    <textarea class="form-control" id="Description" name="Description" maxlength = "500"></textarea>
-                    <label for="Description" class="col-form-label"><span id="charcount">500</span> characters left</label> 
+                    <textarea 
+                    class="form-control" 
+                    id="Description" 
+                    name="Description" 
+                    maxlength = "500"
+                    ></textarea>
+                    <label for="Description" class="col-form-label">
+                        <span id="charcount">500</span> characters left
+                    </label> 
                 </div>
             </div>
 
             <!--RESPONSIBLE MAIL-->
             <div class="form-group mb-5">
-                <!-- <label class="mb-0" for="Responsible">Contact Mail</label> -->
-                <!--<small id="ResponsibleHelp" class="form-text text-muted mb-1 mt-0">Email address to which data confirmation form will be sent (24h to confirm)</small>-->
-                <!-- <input type="mail" class="form-control" id="Responsible" name="Responsible" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="example@unibo.it" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true"> -->
                 <label for="Responsible">Contact Mail</label>
                 <select class="form-control" id="Responsible" name="Responsible" required="true">
                     <option value="" selected>Address for confirmation emal</option>
                 </select>
-                </div>
+            </div>
 
             <!--privacy-->
             <div class="form-group mb-3">
-                    <label class="custom-control custom-checkbox">
+                <label class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="privacy" required>
-                    <label class="custom-control-label" for="privacy">I agree to the <a target="_blank" href="{{ url_for('privacy') }}">Privacy Policy & Terms of Service</a></label>
+                    <label class="custom-control-label" for="privacy">
+                        I agree to the 
+                        <a target="_blank" href="{{ url_for('privacy') }}">
+                            Privacy Policy & Terms of Service
+                        </a>
                     </label>
-                  </div>
+                </label>
+            </div>
 
             <!--Captcha-->
              <div class="form-group d-flex mb-3">
                 <div class="g-recaptcha" data-sitekey="6LdawPwUAAAAAPUu2tYQgFlUWEUsdGwVlGigdEqC"></div>
             </div>
 
-
-            <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
             <input class="btn btn-warning mb-3 d-none"  name="graphid" value="{{project_data.graph}}">
             <input class="btn btn-warning mb-3 d-none"  name="mode" value="update">
             <input type="submit" class="btn btn-primary mb-3"  name="action" value="Submit">
-
         </form>
     </div>
 
-<script>
 
+<script>
 
 $(document).ready(function () {
     var next = 0;
-    var len = 1
-
+    var len = 1;
     var courses_data = JSON.parse('{{ courses_data | tojson | safe}}');
     var project_data = {{ project_data | tojson | safe }};
     var authors_data = {{ authors_data | tojson | safe }};
@@ -151,16 +219,9 @@ $(document).ready(function () {
         $("#Responsible").append('<option value="'+ authors_data[i].mail +'">'+ authors_data[i].mail + '</option>')
     }
 
-
     document.getElementById('Aut[0][Name]').value=authors_data[0]['name']
     document.getElementById('Aut[0][Surname]').value=authors_data[0]['surname']
     document.getElementById('Aut[0][Mail]').value=authors_data[0]['mail']
-
-
-
-
-    
-
 
     for (i=1; i < authors_data.length; i++){
         next = next + 1;
@@ -221,7 +282,6 @@ $(document).ready(function () {
             home.val("https://" + home.val());
         }
     });
-    
 
     $("#add-more").click(function(e){
         e.preventDefault();
@@ -254,7 +314,6 @@ $(document).ready(function () {
                         </div>'
         $('#author-container .author-container-body').append(template);
         len = $('.author-item').length;            
-
         $(".delete").click(function(){
             var target = $(this).attr('for');
             $('#'+ target).remove()
@@ -311,44 +370,4 @@ function cut(str){
 </script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
 
-
 {% endblock %}
-
-
-
-
-<!--- HTML IMAGES
-                <div class="form-group">
-                        <label>Project's Logo (optional)</label>
-                        <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="Logo" name="Logo" accept=".png, .jpg">
-                            <label class="custom-file-label text-left" for="Logo">Choose image (.png or .jpg only)</label>
-                        </div>
-                        <small id="remove-container" class="form-text text-muted text-left d-none">
-                                <button type="button" id="remove-file" class="btn btn-danger btn-sm">Remove File</button>
-                            </small>
-                    </div>-->
-<!--- JS IMAGES
-
-    $('#Logo').on('change',function(){
-            //get the file name
-            var fileName = $(this).val();
-            //replace the "Choose a file" label
-            if (fileName){
-                $('.custom-file-label').html(fileName);
-                $("#remove-container").removeClass("d-none")
-            }
-            else{
-                $('.custom-file-label').html("Choose image (.png or .jpg only)");
-                $("#remove-container").addClass("d-none")
-            }
-        })
-    $("#remove-file").click(function(){
-            $('#Logo').replaceWith($('#Logo').val('').clone(true));
-            $('.custom-file-label').html("Choose image (.png or .jpg only)");
-            $("#remove-container").addClass("d-none")
-        });
-
-
--->
-
