updating mechanics updated (badum-tss) for logged in users

--- a/app/templates/admin/AdminConfirm.html
+++ b/app/templates/admin/AdminConfirm.html
@@ -101,7 +101,7 @@
                       <td>
                         <h3>[[ item.title ]]</h3>
                         <div>
-                         <h5><span class="badge badge-primary mr-1" v-for="(aut, index) in item.authors">[[ aut ]]</span></h5>
+                         <h5><span class="badge fw-light text-dark ps-0" v-for="(aut, index) in item.authors">[[ aut ]]</span></h5>
                         </div>
                         <div>
                             <b>Published By:</b> [[item.publisher]]
