changes at email settings

--- a/app/templates/email/suspended_projects_info.html
+++ b/app/templates/email/suspended_projects_info.html
@@ -23,7 +23,7 @@ Thank you for reaching out!</p>
 </div>
 {% endfor %}
 
-<p>If you did not request to see your suspended projects and this email found you by mistake, we suggest that you get in touch with <a href="mailto:nikolay.gorbachev@sudio.unibo.it">DHDKey! team</a></p>
+<p>If you did not request to see your suspended projects and this email found you by mistake, we suggest that you get in touch with <a href="mailto:dhdkeymail@gmail.com">DHDKey! team</a></p>
 <p>Sincerely,
     <br>
     <br>
