--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -190,7 +190,7 @@
                   <div class="modal-body bg-light">
                           <h4 class="text-center">No suspended projects found</h4>
                   <p>Seems like no projects were submitted with the email you mentioned.</p>
-                  <p>Try searching on the website or <a href='mailto:nikolai.gorbachev@studio.unibo.it'>contact us</a></p>
+                  <p>Try searching on the website or <a href='mailto:dhdkeymail@gmail.com'>contact us</a></p>
                   </div>
                   <div class="modal-footer bg-light  justify-content-center">
                   <button type="button" class="btn btn-secondary btn-danger" data-bs-dismiss="modal">OK</button>
