--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -83,7 +83,7 @@
                 data-bs-title="
                     <div class='d-flex flex-column gap-1'>
                             <div><a href='#' id='need-help-link-p' class='text-white'>Need help?</a></div>
-                            <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
+                            <div><a href='mailto:dhdkeymail@gmail.com' class='text-white'>Report a problem</a></div>
                             <div><a href='#' id='show-modal-link' class='text-white' type='button' data-bs-toggle='modal' data-bs-target='#myProjectsModal'>My projects' status</a></div>
                     </div>"
                 data-bs-template='
@@ -364,21 +364,6 @@
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </button>
                                 </form>
-                                <!-- <ul class="dropdown-menu">
-                                    <li>
-                                        <a class="dropdown-item" href="#">
-                                            <input type="submit" class="btn" name="action" value="Edit project">
-                                        </a>
-                                    </li>
-                                    <li>
-                                      <hr class="dropdown-divider">
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">
-                                            <input type="submit" class="btn" name="action" value="Delete project">
-                                        </a>
-                                    </li>
-                                </ul> -->
                             </div>
                         </div>
                         <div class="mb-3 ">
