--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -115,7 +115,7 @@
                     data-bs-title="
                         <div class='d-flex flex-column gap-1'>
                                 <div><a  href='#' id='need-help-link' class='text-white'>Need help?</a></div>
-                                <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
+                                <div><a href='mailto:dhdkeymail@gmail.com' class='text-white'>Report a problem</a></div>
                         </div>"
                     data-bs-template='
                         <div class="tooltip" role="tooltip"><div class="tooltip-arrow"></div><div class="tooltip-inner"></div></div>
