--- a/app/templates/documents/info.html
+++ b/app/templates/documents/info.html
@@ -114,7 +114,7 @@
                                 <i class="fas fa-map-marker-alt fa-2x"></i>
                         </a>
                         <a 
-                        href="mailto:nikolay.gorbachev@studio.unibo.it" 
+                        href="mailto:dhdkeymail@gmail.com" 
                         data-bs-toggle="tooltip" 
                         data-bs-title="Report a problem"
                         data-bs-placement="bottom"
