--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,33 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container d-flex flex-column d-flex justify-content-start pt-5" style="height: 100%;">
+<div class="container d-flex flex-column d-flex justify-content-start pt-2" style="height: 100%;">
   <div class="row mt-5">
     <div class="col-sm-8 font-weight-light mx-auto mt-5">
-      <h1 class="display-4 mb-0">
+      <h1 class="display-3 mb-0 ms-0 ps-0">
         DHDKey!
       </h1>
-      <h4 class="lead mt-0" style="font-variant: small-caps;">
-          <span class="text-nowrap">
+      <h4 class="mt-0">
+          <span class="text-nowrap fw-light" style="font-variant: small-caps;">
             Digital Humanities & Digital Knowledge
           </span>
-          <span class="text-nowrap">
-              Educational Yearbook
+          <span class="text-nowrap text-body-secondary fw-light" style="font-variant: small-caps;" >
+              educational yearbook
           </span> 
       </h4>
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mt-2">
     <div id="el"  class="col-sm-8 mx-auto">    
       <form  action="{{ url_for('projects') }}"  class="navbar-form navbar-left" autocomplete="off">
         <div class="row">
-          <div class="col-10">
-            <input type="text" v-model="query" onkeypress="preventSubmitting(event)" onfocus="showOptions()"  oninput="showOptions()"  class="form-control search-input" id="search-input" placeholder="Search for a project by name, description or authors">
+          <div class="col-10 pe-0">
+            <input type="text" v-model="query" onkeypress="preventSubmitting(event)" onfocus="showOptions()"  oninput="showOptions()"  class="form-control search-input fs-6 lh-lg" id="search-input" placeholder="Search for a project by name, description or authors">
           </div>
           <div class="col-2">
-            <a class="btn btn-primary" style="width:100%; height: 35px !important;  border-radius: 0px 4px 4px 0px !important" v-bind:href= "'{{ url_for('projects', search="") }}' + [[ query ]]">
-              <i class="fas fa-search"></i>
+            <a class="btn btn-primary" style="width:100%; border: 1px solid white; border-radius: 0px 4px 4px 0px !important" v-bind:href= "'{{ url_for('projects', search="") }}' + [[ query ]]">
+              <i class="fas fa-search lh-lg"></i>
             </a>
           </div>
         </div>
@@ -43,7 +43,7 @@
         </div>
       </form>
 
-      <div class="row text-center d-flex flex-row justify-content-between align-items-stretch flex-wrap">
+      <div class="mt-1 row text-center d-flex flex-row justify-content-between align-items-stretch flex-wrap">
           <div class="col-sm pb-2">
               <div class="card shadow-sm">
                   <div class="card-body d-flex flex-column align-items-center">
